# actix-hello-server

./: Cargo.toml  start_dev.sh
src/: main.rs
static/: index.html
