[package]
name = "hello-world"
version = "0.1.0"
authors = ["Dave Filion <dave.filion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
actix-web-actors = "2.0.0"
listenfd = "0.3.3"
serde = "1.0.104"
serde_json="1.0.48"
futures = "0.3.4"
failure = "0.1.7"
